kubernetes/apps/kube-system/external-secrets/bitwarden/networkpolicy.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw-cli
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden
      app.kubernetes.io/name: bitwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: vw.cloudjur.com
        - matchName: api.bitwarden.com
